@@ -29,8 +29,17 @@ test {
             '-Dglass.platform=Monocle',
             '-Dmonocle.platform=Headless',
             '-Djdk.gtk.version=2',
-            '-Dprism.verbose=true',
-            '-Xmx1g'
+            "-Dprism.verbose=${System.getenv('PRISM_VERBOSE') ?: 'false'}",
+            '-Xmx1g',
+            '--add-exports', 'javafx.graphics/com.sun.glass.ui.monocle=ALL-UNNAMED',
+            '--add-opens', 'javafx.graphics/com.sun.glass.ui.monocle=ALL-UNNAMED',
+            '--add-opens', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED',
+            '--add-opens', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
+            '--add-opens', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
+            '--add-opens', 'javafx.base/javafx.beans.property=ALL-UNNAMED',
+            '--add-opens', 'javafx.base/javafx.collections=ALL-UNNAMED',
+            '--add-opens', 'javafx.base/com.sun.javafx.collections=ALL-UNNAMED',
+            '--add-opens', 'javafx.base/com.sun.javafx.binding=ALL-UNNAMED'
     ]
 
     systemProperty 'testfx.setup.timeout', '60000'
